syntax = "proto3";
package blog.sagenft;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sagenft/params.proto";
import "sagenft/nft_item.proto";

// this line is used by starport scaffolding # 1

option go_package = "blog/x/sagenft/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/blog/sagenft/params";
  }
  // Queries a list of ListNftItem items.
	rpc ListNftItem(QueryListNftItemRequest) returns (QueryListNftItemResponse) {
		option (google.api.http).get = "/blog/sagenft/list_nft_item";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryListNftItemRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListNftItemResponse {
  repeated NftItem NftItem = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
